# CourseWork-4

./: .gitignore  README.md  main.py  pyproject.toml
src/: file_manager.py  functions.py  headhunterAPI.py  vacancies.py  webServicesAPI.py
tests/: test_functions.py
