[tool.poetry]
name = "coursework-4"
version = "0.1.0"
description = ""
authors = ["Andrey Khatin <ankhatin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.2"
lxml = "^5.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
